docs: allow long links to wrap to prevent overflow on mobile
(cherry picked from commit 4443626b167c4e07bc971afe5bb05ea04bc27bc3)

--- a/docs/style.css
+++ b/docs/style.css
@@ -111,6 +111,7 @@ a {
   text-decoration: none;
   color: var(--sd-link-color);
   cursor: pointer;
+  overflow-wrap: anywhere;
 }
 a:hover {
   text-decoration: underline;
